--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,32 @@
-
+.head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 26px;
+}
+.head button{
+    padding: 10px 20px;
+    background-color: green;
+    border-radius: 10px;
+    color: white;
+    border: none;
+    font-size: 20px;
+    font-weight: 500;
+}
+.head button:hover{
+cursor: pointer;
+}
+.lebels{
+    display: flex;
+    justify-content: space-between;
+    background-color: black !important;
+    color: white;
+}
+.lebels h4{
+    /* padding: 0px 10px; */
+}
+.user{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
